Update postcss.config.js and tailwind.config.js

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwind build src/style.css -o public/style.css"
+    "build:css": "postcss src/tailwind.css -o public/style.css"
   },
   "keywords": [],
   "author": "Redha Azmei",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.8.0",
+    "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
   }
 }
